fixed social button alignment; added styles for people lists

--- a/lsecities-2012/stylesheets/style.css
+++ b/lsecities-2012/stylesheets/style.css
@@ -324,10 +324,10 @@ div.widget h2 { margin-bottom: 0.5em; }
 #keyfacts dl dd ul li:after { content: ', '; }
 #keyfacts dl dd ul li:last-child:after { content: ''; }
 
-#share-on-social-media { float: right; }
-#share-on-social-media > h1 { display: inline; font-size: 1em; }
-#share-on-social-media > ul, #share-on-social-media > ul > li { display: inline; vertical-align: middle; }
-#share-on-social-media > ul a img, #share-on-social-media > ul > li a img { width: 20px; height: 20px; }
+#share-on-social-media { margin-top: 1em; }
+#share-on-social-media span { font-size: 1em; display: inline; padding: 0 0.25em; }
+#share-on-social-media span a { vertical-align: middle; }
+#share-on-social-media span a img { width: 20px; height: 20px; }
 
 blockquote { margin: 1.5em 0 0.75em 3em; -moz-box-shadow: rgba(0, 0, 0, 0.5) 0 0 6px; -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 0 6px; -o-box-shadow: rgba(0, 0, 0, 0.5) 0 0 6px; box-shadow: rgba(0, 0, 0, 0.5) 0 0 6px; border-left: 0.5em solid #DDDDDD; padding: 0 0.5em; }
 blockquote::before { color: #999999; content: "“"; display: block; font-size: 4em; font-style: italic; line-height: 1em; height: 0; margin-left: -0.8em; }
@@ -439,6 +439,10 @@ right: -21px; */ }
 .lc-publication #tableofcontents .articles > section .article .excerpt { font-size: 1em; }
 
 nav#projectsmenu h1 { font-size: 1.2em; font-weight: bold; margin-bottom: 0.5em; }
+
+.lc-people-list .person { margin-bottom: 1em; }
+.lc-people-list .person .profile-photo { text-align: center; }
+.lc-people-list .person .profile-photo img { width: 144px; max-width: 144px; }
 
 /*/mediaquery*/
 /*/mediaquery*/
